--- a/src/pages/TIL/[slug].astro
+++ b/src/pages/TIL/[slug].astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import calculateReadingTime from "reading-time";
 import Bio from "../../components/Bio.astro";
-import DateTime from "../../components/DateTime.svelte";
+import DateTime from "../../components/DateTime.astro";
 import Tag from "../../components/Tag.astro";
 import WebMentions from "../../components/WebMentions.svelte";
 import BaseLayout from "../../layouts/BaseLayout.astro";
@@ -57,7 +57,7 @@ const { Content, remarkPluginFrontmatter } = await entry.render();
 
     <hr />
   </header>
-  <div class="max-w-[42rem] m-auto">
+  <div class="max-w-2xl m-auto">
     <article>
       <Content />
     </article>
