--- a/src/pages/bucket.astro
+++ b/src/pages/bucket.astro
@@ -1,5 +1,5 @@
 ---
-import DateTime from "../components/DateTime.svelte";
+import DateTime from "../components/DateTime.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { getLastModifiedDate } from "../utils/fileLastModifiedDate";
 
