--- a/src/pages/wish.astro
+++ b/src/pages/wish.astro
@@ -1,5 +1,5 @@
 ---
-import DateTime from "../components/DateTime.svelte";
+import DateTime from "../components/DateTime.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
 const lastUpdated = "2023/12/23";
