--- a/src/pages/bucket.astro
+++ b/src/pages/bucket.astro
@@ -15,7 +15,7 @@ const permalink = `/bucket`;
   permalink={permalink}
   current="now"
 >
-  <div class="max-w-[42rem] m-auto">
+  <div class="max-w-2xl m-auto">
     <h1>{title}</h1>
      Updated
     <DateTime datetime={lastModified} />
