--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,6 +26,7 @@ const { title, description, permalink = "/", current, image } = Astro.props;
     <div class="flex flex-col min-h-screen">
       <Header current={current} />
 
+      <slot name="hero" />
       <main class="flex-1 max-w-4xl mx-auto w-full px-4 sm:px-6 lg:px-8 py-8">
         <slot />
       </main>
